--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ jobs:
             whoami
             cd ~
             cd /www/wwwroot/api.skydio.id
-            git pull origin master                     
-            docker stop skydio
-            docker rm skydio
-            docker rmi skydio-api
-            docker compose up -d 
-            docker image prune -f          
+            # git pull origin master                     
+            # docker stop skydio
+            # docker rm skydio
+            # docker rmi skydio-api
+            # docker compose up -d 
+            # docker image prune -f          
