--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,3 +20,8 @@ jobs:
             whoami
             cd ~
             cd /www/wwwroot/api.skydio.id
+            git pull origin master                     
+            docker stop skydio
+            docker rm skydio            
+            docker compose up -d 
+            docker image prune -f   
