--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,9 @@ jobs:
           script: |
             whoami
             cd ~
-            cd /www/wwwroot/api.skydio.id
+            cd /www/wwwroot/go-hello
             git pull origin master                     
-            docker stop skydio
-            docker rm skydio            
+            docker stop hello
+            docker rm hello            
             docker compose up -d 
             docker image prune -f   
