--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
             whoami
             cd ~
             cd /www/wwwroot/go-hello
-            git pull origin master                     
-            docker stop hello
-            docker rm hello            
-            docker compose up -d 
-            docker image prune -f   
+            git fetch --all
+            git reset --hard origin/master
+            docker compose down
+            docker compose up -d --build
+            docker image prune -f
